--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-pytz==2022.1
-requests==2.27.1
-slack-bolt==1.13.0
-slack-sdk==3.15.2
+slack-bolt
+pytest
+flake8==4.0.1
+black==22.6.0
+requests
+pytz
